--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,8 @@
     align-items: center;
     gap: 2rem;
     padding-top: 3rem;
-    background-color: #f1f1f1;
-    height: 100%;
+    background-color: #e2e1e1;
+    height: 100vh;
 }
 
 .container h1 {
